--- a/Assets/images/Takehome/SalaryHunter _ Pay Calculator_files/global-styles.css
+++ b/Assets/images/Takehome/SalaryHunter _ Pay Calculator_files/global-styles.css
@@ -20,8 +20,9 @@ body {
     background-color: white;
 }
 
-main, header {
-    padding: 0 20px;
+main {
+    width: 100%;
+    height: 100%;
 }
 
 /* Reused Components
@@ -45,7 +46,7 @@ main, header {
 
 nav {
     padding: 1em;
-    height: 45px;
+    height: 5vh;
     position: sticky;
     box-shadow: 0 0 1em 0.05em black;
     background-color: white;
@@ -62,10 +63,8 @@ nav>ul>li {
 }
 
 nav>ul>li>h1 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     padding: 0.4em;
+    font-size: 1.5em;
     font-weight: bold;
     border: 1px solid black;
 }
@@ -75,6 +74,7 @@ nav>ul>li>h1>a {
     cursor: pointer;
     text-decoration: none;
     color: #000;
+    vertical-align: middle;
 }
 
 nav>img {
