add dynamic vacancies card

--- a/Stylesheets/stylesheet-home.css
+++ b/Stylesheets/stylesheet-home.css
@@ -1,6 +1,10 @@
 /* Header
    ============================= */
 
+main {
+    padding: 0 !important;
+}
+
 header {
     display: flex;
     height: 95vh;
