--- a/Stylesheets/stylesheet-home.css
+++ b/Stylesheets/stylesheet-home.css
@@ -112,8 +112,14 @@ header {
     text-align: center;
 }
 
+#section-1-right-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 #section-1-right-content h1 {
-    margin: 2em 0 2em 0em;
+    margin: 2em 0 0.2em 0em;
 }
 
 #section-1-right-content p {
